--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "from openai import OpenAI\n",
     "\n",
-    "client = OpenAI(api_key=\"TU_API_KEY\")"
+    "client = OpenAI(api_key=\"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\")"
    ]
   },
   {
